fix(nav): increase breakpoints to avoid overflow
fixes https://github.com/mdn/fred/issues/1244

--- a/components/menu/desktop.css
+++ b/components/menu/desktop.css
@@ -47,7 +47,7 @@
       display: none;
     }
 
-    @media (width <= 1065px) {
+    @media (--screen-menu-short-labels) {
       &[data-type="long"] {
         display: none;
       }
